# imdb-ai-pipeline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.test  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  docker-compose.yml  imdb_top.py  imdb_top_250.json  pyproject.toml  test_contracts_manual.py
.github/agents/: imdb-scraper-agent.agent.md
.github/hooks/: post-edit-python-check.json
.github/instructions/: python.instructions.md
.github/prompts/: imdb-data-analysis.prompt.md
.github/workflows/: ci.yml
contracts/: .gitignore  CsharpContracts.cs  python_contracts.py
docs/: Distributed scrapping system.drawio  planned folders structure.md
docs/adr/: 001-migration-from-dotnet-to-go-worker.md  002-add-prometheus-worker-observability.md
docs/benchmarks/: dotnet-vs-go-ingestion.md
imdb_top250_scraper/: cli.py  constants.py  models.py
infra/alloy/: config.alloy
infra/grafana/provisioning/dashboards/: dashboard.yml  imdb_pipeline.json
infra/grafana/provisioning/datasources/: datasource.yml
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
infra/tempo/: tempo.yaml
src/api_fastapi/: Dockerfile  pyproject.toml  requirements.txt
src/api_fastapi/src/: main.py
src/api_fastapi/tests/: test_enrichment_stream.py
src/contracts/: python_contracts.py  schemas.json  test_contracts.py
src/scraper_python/: .dockerignore  .gitignore  Dockerfile  INTEGRATION_GUIDE.md  TELEMETRY.md  _old_requirements.txt  pyproject.toml  requirements-dev.txt
src/scraper_python/schema/: imdb_top_250.schema.json  imdb_top_250_jsonl_line.schema.json
src/scraper_python/src/: imdb_top.py
src/scraper_python/src/imdb_top250_scraper/: __init__.py  cli.py  constants.py  logger.py  models.py  output.py  parsing.py  redis_publisher.py  scraper.py  telemetry.py  validation.py
src/scraper_python/tests/: __init__.py  test_imdb_top.py
src/worker_ai_python/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
src/worker_ai_python/src/: main.py
src/worker_dotnet/: .dockerignore  .gitignore  Dockerfile  ImdbWorker.slnx
src/worker_dotnet/src/ImdbWorker.Service/: Contracts.cs  ImdbWorker.Service.csproj  Program.cs  Worker.cs
src/worker_dotnet/src/ImdbWorker.Service/Properties/: launchSettings.json
src/worker_go/: .dockerignore  .gitignore  Dockerfile  go.mod  go.sum
src/worker_go/cmd/worker/: main.go
src/worker_go/internal/config/: config.go
src/worker_go/internal/db/: postgres.go
src/worker_go/internal/model/: model.go
src/worker_go/internal/redis/: consumer.go  consumer.go.txt
src/worker_go/internal/telemetry/: logger.go  propagation.go  trace.go
tests/: test_imdb_top.py
tests/load_bench/: fill_redis_stream.py
