[project]
name = "imdb-top250-scraper"
version = "0.1.0"
description = "Scrape the IMDb Top 250 chart and save it as JSON or JSON Lines."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright==1.59.0",
]

[project.scripts]
imdb-top250-scraper = "imdb_top250_scraper.cli:run"

[project.optional-dependencies]
dev = [
    "ruff>=0.14,<1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
