[project]
name = "imdb-api"
version = "0.1.0"
description = "FastAPI service for IMDb AI pipeline - serves movie data and enrichment endpoints"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "asyncpg==0.29.0",     # Blazing fast async PostgreSQL driver
    "pandas==2.2.2",       # For data manipulation
    "openpyxl==3.1.2",     # Engine for creating .xlsx files
    "httpx==0.27.0",
    "redis==5.0.3",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14,<1",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
