[project]
name = "imdb-ai-worker"
version = "0.1.0"
description = "AI worker service for IMDb data enrichment"
requires-python = ">=3.11"
dependencies = [
    "redis==5.0.3",
    "httpx==0.27.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.0.0",
    "prometheus-client>=0.22.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.14,<1",
    "mypy>=1.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
